syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.hospital.portioncalculator";
option java_outer_classname = "ContinuousAssessment";

service PortionCalculatorService {
  rpc SuitableMeal(SuitableMealRequest) returns (SuitableMealResponse) {}

  rpc DailyMeals(DailyMealsRequest) returns (stream DailyMealsResponse) {}

  rpc CurrentPortion(CurrentPortionRequest) returns (CurrentPortionResponse) {}
}

message SuitableMealRequest {
  string user_id = 1;
}

message SuitableMealResponse {
  enum DietLevel {
    LOW = 0;
    MEDIUM = 1;
    HIGH = 2;
  }
  DietLevel diet_level = 1;
}

message DailyMealsRequest {
  string user_id = 1;
}

message DailyMealsResponse {
  repeated string meals = 1;
}

message CurrentPortionRequest {
  string user_id = 1;
  string meal = 2;
}

message CurrentPortionResponse {
  string food = 1;
  int32 quantity = 2;
}